[package]
name = "starcoin-proptest-helpers"
version = "0.4.1"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
diem-proptest-helpers = { package="diem-proptest-helpers",  git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }

proptest = "1.0.0"
proptest-derive = "0.3.0"
