[package]
name = "move-prover"
version = "1.0.0-beta.4"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
edition = "2018"
license = "Apache-2.0"

[dependencies]
# diem dependencies
boogie-backend = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
boogie-backend-v2 = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
move-lang = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
move-model = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
docgen = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
errmapgen = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
bytecode = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
vm = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
diem-temppath = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
bytecode-source-map = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
move-ir-types = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
abigen = { git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }

# external dependencies
async-trait = "0.1.48"
anyhow = "1.0.40"
clap = "2.33.3"
codespan = "0.8.0"
codespan-reporting = "0.8.0"
futures = "0.3.12"
handlebars = "3.5.3"
hex = "0.4.3"
itertools = "0.10.0"
log = "0.4.14"
num = "0.4.0"
pretty = "0.10.0"
rand = "0.8.3"
regex = "1.4.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.61"
simplelog = "0.9.0"
once_cell = "1.7.2"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5.8"

[dev-dependencies]
datatest-stable = {git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
move-prover-test-utils = {git = "https://github.com/starcoinorg/diem", rev="bad968ade5503a0b4f7ac4115309307e4ae7ac37" }
shell-words = "1.0.0"

[[test]]
name = "testsuite"
harness = false
